OH-69 update billings doc
