# app/Http/Controllers/API/V1/Doctor/Billings.php
@@ -23,9 +23,97 @@ use OpenApi\Annotations as OA;
  *          in="path",
  *          example="1"
  *     ),
+ *     @OA\Parameter(
+ *          name="page",
+ *          required=false,
+ *          description="Page number",
+ *          in="query",
+ *          example="1"
+ *     ),
+ *     @OA\Parameter(
+ *          name="per_page",
+ *          required=false,
+ *          description="Items amount on page",
+ *          in="query",
+ *          example="15"
+ *     ),
  *     @OA\Response(
  *         response=200,
  *         description="Billings has been succesfully received",
+ *         @OA\MediaType(
+ *              mediaType="application/json",
+ *              @OA\Schema(
+ *                  properties={
+ *                      @OA\Property(
+ *                          @OA\Items(
+ *                              type="object",
+ *                              ref="#/components/schemas/EnquireResource"
+ *                          ),
+ *                          title="Enquires",
+ *                          description="Enquires list",
+ *                          property="data",
+ *                      ),
+ *                      @OA\Property(
+ *                          @OA\Items(
+ *                              properties={
+ *                                  @OA\Property(
+ *                                      property="first",
+ *                                      example="http://online-hautarzt.com/api/v1/enquires?page=1"
+ *                                  ),
+ *                                  @OA\Property(
+ *                                      property="last",
+ *                                      example="http://online-hautarzt.com/api/v1/enquires?page=10"
+ *                                  ),
+ *                                  @OA\Property(
+ *                                      property="prev",
+ *                                      example="http://online-hautarzt.com/api/v1/enquires?page=4"
+ *                                  ),
+ *                                  @OA\Property(
+ *                                      property="next",
+ *                                      example="http://online-hautarzt.com/api/v1/enquires?page=6"
+ *                                  )
+ *                              },
+ *                          ),
+ *                          property="links"
+ *                      ),
+ *                      @OA\Property(
+ *                          @OA\Items(
+ *                              properties={
+ *                                  @OA\Property(
+ *                                      property="current_page",
+ *                                      example="5"
+ *                                  ),
+ *                                  @OA\Property(
+ *                                      property="from",
+ *                                      example="9"
+ *                                  ),
+ *                                  @OA\Property(
+ *                                      property="last_page",
+ *                                      example="10"
+ *                                  ),
+ *                                  @OA\Property(
+ *                                      property="path",
+ *                                      example="http://online-hautarzt.com/api/v1/enquires"
+ *                                  ),
+ *                                  @OA\Property(
+ *                                      property="per_page",
+ *                                      example="2"
+ *                                  ),
+ *                                  @OA\Property(
+ *                                      property="to",
+ *                                      example="10"
+ *                                  ),
+ *                                  @OA\Property(
+ *                                      property="total",
+ *                                      example="19"
+ *                                  ),
+ *                              },
+ *                          ),
+ *                          property="meta"
+ *                      )
+ *                  }
+ *              )
+ *          )
  *     ),
  *     @OA\Response(
  *         response=500,
